# esp-ethernet

./: .gitignore
client/: Cargo.toml  sdkconfig.defaults
client/.cargo/: config.toml
client/src/: main.rs
